--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "Seeedr"
 meta_title: "Seeedr - Exhibit the artists of tomorrow in your office"
 meta_description: "Seeedr.com helps companies to enlight their workplaces. Find out how to exhibit young artists into your office."
-meta_image: "office.jpg"
+meta_image: "opengraph.jpg"
 twitter_account: "@seeedr"
